--- a/zdcat/pom.xml
+++ b/zdcat/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>xyz.ibenben</groupId>
-	<artifactId>zhongdian</artifactId>
+	<artifactId>zdcat</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>zhongdian Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
@@ -69,6 +69,16 @@
 			<version>19.0</version>
 		</dependency>
 
+		<!-- dianping cat -->
+		<dependency>
+			<groupId>com.dianping.cat</groupId>
+			<artifactId>cat-client</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			</dependency>
 
 	</dependencies>
 
